# test_android_qt_app

./: .gitignore  CMakeLists.txt  Main.qml  androidtoast.cpp  main.cpp
android/: AndroidManifest.xml  gradle.properties  local.properties
android/assets/: android_rcc_bundle.rcc
android/res/values/: libs.xml
android/src/ru/leartiz/: BannerAdActivity.java  ScreenUtils.java  StickyBannerAdActivity.java
include/: androidbannerad.h  androidtoast.h
src/: androidbannerad.cpp  androidtoast.cpp  main.cpp
